# planets_and_moons

./: CMakeLists.txt  README.md
scripts/: process_images.cpp  visualize_predictions.cpp
src/: dataset.h  main.cpp  model.cpp  model.h  utils.cpp  utils.h
